# CTP

./: .gitignore  API_Validation_Report.md  Implementation_Corrections_Summary.md  README.md  build_official_api.bat  build_portable.bat  claude.md  cpp_full_implementation.cpp  cpp_minimal_demo.cpp  csharp_minimal_demo.cs  python_minimal_demo.py  run_portable.bat
Sim/: sim_login_test.py  期货仿真测试.txt
api_v6.7.7/v6.7.7_traderapi_20240607/: v6.7.7_tradeapi升级说明.txt
ctp_trading_system/: IMPLEMENTATION_LOG.md  __init__.py  integration_test.py  main.py  requirements.txt  test_sim_connection.py
ctp_trading_system/alert/: __init__.py  alert_service.py
ctp_trading_system/config/: __init__.py  settings.py  sim_config.yaml
ctp_trading_system/core/: __init__.py  ctp_gateway.py  md_gateway.py
ctp_trading_system/ctp_api/: .gitignore  __init__.py  ctp_api.py  ctp_md_api.py
ctp_trading_system/data/: __init__.py  bar_aggregator.py  context_manager.py  feature_sequence_cache.py  l2_depth_buffer.py  tick_cache.py  trade_context.py
ctp_trading_system/docs/: ASSESSMENT_CHECKLIST.md  TEST_GUIDE.md  USER_OPERATION_GUIDE.md  WEB_UI_DESIGN.md  申万测试待通过项修正方案.md  策略集成设计方案_v1.md
ctp_trading_system/emergency/: __init__.py  emergency_handler.py
ctp_trading_system/flow/: .gitignore
ctp_wrapper/: .gitignore  CMakeLists.txt  DEV_LOG.md  README.md  build.bat  build_md.bat  build_mingw.bat  compile_msvc.bat
ctp_wrapper/python/: change_password.py  ctp_api.py  full_test.py  login_test.py
ctp_wrapper/src/: ctp_md_wrapper.cpp  ctp_md_wrapper.h  ctp_wrapper.cpp  ctp_wrapper.h
(+51 files in other folders)
